src-ken&y/objects/UOM__c.object
<CustomObject>
    <customHelpPage>HelpUOM</customHelpPage>
    <description>Units of Measure.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of UOM</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Every__c</fullName>
        <label>Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Package_Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Package Class for the UOM.</description>
        <label>Package Class</label>
        <referenceTo>Package_Class__c</referenceTo>
        <relationshipLabel>UOMs</relationshipLabel>
        <relationshipName>UOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Quarter(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>UOM Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>UOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Every__c</columns>
        <columns>Recurrence__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UOM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Time_UOM_Data_validation</fullName>
        <active>true</active>
        <description>If the UOM type is Time, the fields &apos;every&apos; and &apos;recurrence&apos; are mandatory.</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Time&apos;)   &amp;&amp;  (ISNULL(Every__c)  ||   ISBLANK(TEXT( Recurrence__c )))</errorConditionFormula>
        <errorMessage>&apos;Every&apos; and &apos;Recurrence&apos; fields cannot be empty for UOM of type &apos;Time&apos;</errorMessage>
    </validationRules>
</CustomObject>